--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.0
+Added the ability to set your sound devices in the audio settings menu.
 Added an option in the game settings menu to show or hide read only toggle descriptions.
 Resolved an issue where the store in level 6 on normal mode had a very high chance of exploding even after a user has paused or whent into another menu inside the game.
 Separated the preferences menu into 2 different sections. You can now access and save audio and game settings independently of each other.
