--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,7 @@
 new in 3.0
+Added the ability to collect and use ammo packs in endless mode, along with health potions.
+Added some more item related sounds into the learn game sounds menu.
+Replaced the machine gun reloading sounds with better ones.
 Introduced a new realistic weapon reloading system. Reloading a weapon will now take time instead of instantly restoring ammo.
 Added options in the game settings menu to enable or disable the complete and toggle switch sounds.
 Improved the sound device selection menu by sorting the available devices alphabetically and labeling them as “active” or “inactive” based on the current selection. This makes it easier for users to help them identify the correct output device.
