--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.2
+Added quantity selection and validation prompts to the shop menu to prevent invalid or unaffordable purchases.
 Added a small shop menu to the endless mode that allows you to buy various items from the store with the currency the game provides. You can check how much money you currently have by pressing the letter M.
 Made it so healing zones now have different loop sounds.
 new in 3.1
