--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,6 +1,7 @@
 new in 3.2
+Updated the readme file with added and modified keyboard shortcuts.
 Added quantity selection and validation prompts to the shop menu to prevent invalid or unaffordable purchases.
-Added a small shop menu to the endless mode that allows you to buy various items from the store with the currency the game provides. You can check how much money you currently have by pressing the letter M.
+Added a shop menu to the endless mode that allows you to buy various items from the store with the currency the game provides. This menu is accessed by pressing the letter S. You can also check how much money you currently have by pressing the letter M.
 Made it so healing zones now have different loop sounds.
 new in 3.1
 Added post-destruction zones to Endless Mode. Two glass platforms now appear at the start of Endless Mode as remnants of the destroyed store from Normal Mode. One zone damages the player, while the other one gradually heals the player over time.
