--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.2
+Added a money reward system for reaching higher levels in Endless mode. Players now earn money based on their current level. This encourages consistent progression and spending throughout gameplay.
 Updated the readme file with added and modified keyboard shortcuts.
 Added quantity selection and validation prompts to the shop menu to prevent invalid or unaffordable purchases.
 Added a shop menu to the endless mode that allows you to buy various items from the store with the currency the game provides. This menu is accessed by pressing the letter S. You can also check how much money you currently have by pressing the letter M.
