--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.2
+Made it so using a potion now heals a random amount between 5 and 10 percent of your maximum health.
 Added some more item and player related sounds into the learn game sounds menu.
 Added a money reward system for reaching higher levels in Endless mode. Players now earn money based on their current level. This encourages consistent progression and spending throughout gameplay.
 Updated the readme file with added and modified keyboard shortcuts.
@@ -9,7 +10,7 @@ new in 3.1
 Added post-destruction zones to Endless Mode. Two glass platforms now appear at the start of Endless Mode as remnants of the destroyed store from Normal Mode. One zone damages the player, while the other one gradually heals the player over time.
 Fixed a bug where ammo packs could give negative ammo when the player's ammo reserve was near or above the maximum cap. Ammo packs now correctly calculate the missing reserved ammo, and will only add the valid amount, preventing overfilling or negative ammo gained messages.
 Made it so taking damage during a reload cancels the reload attempt. If the player is hit by an enemy while reloading their machine gun, the reload of the weapon is now interrupted with an audible sound and speech feedback.
-Upgraded the maximum reserved ammo that the machine gun can reload at a time from 20 to 50.
+Upgraded the maximum reserved ammo that the machine gun can reload at a time from 10 to 50.
 Added a ping sound to the machine gun weapon to signify that it has been reloaded successfully.
 Fixed a bug where using a health potion could increase the player's health above the maximum threshold, resulting in inaccurate health percentage readings. Your health is now properly capped at 100% when you're fully healed.
 Made it so reloading the machine gun transfers ammo from your reserved ammo instead of restoring a fixed amount. If the reserved ammo is low, only the available rounds of ammo are loaded.
@@ -17,7 +18,7 @@ Made it so The Z key now reports both the currently loaded and reserved ammo val
 Improved the inventory ammo pack logic to respect your current reserved ammo.
 Implemented separate ammo, maxammo, and reserved_ammo values for machine guns to support more realistic reloads.
 new in 3.0
-Fixed a bug where using an ammo pack in your inventory would incorrectly set your total ammo to the pack's value instead of adding to it. The item now properly increases your current ammo by a random amount between 20 and 40, and reports the correct ammo gained from the opened pack.
+Fixed a bug where using an ammo pack in your inventory would incorrectly set your total ammo to the pack's value instead of adding to it. The item now properly increases your current ammo by a random amount between 5 and 10, and reports the correct ammo gained from the opened pack.
 Added the ability to collect and use ammo packs in endless mode, along with health potions.
 Added some more item related sounds into the learn game sounds menu.
 Replaced the machine gun reloading sounds with better ones.
