Added a built-in game updater. The new system checks your local version against the latest release online and lets you download the appropriate update (Windows installer/portable or Mac) directly from the game. Includes progress feedback, error handling, and file cleanup. A "Check for Game Updates" option is also now available in the main menu.
Implemented an automatic version checker that compares your local game version against the latest version available online.
Introduced a built-in update downloader that retrieves the correct update based on your platform (Windows or Mac) and package type (installer or portable), with progress tracking, error handling, and cleanup of incomplete files.
Added a “Check for Game Updates” option to the main menu, allowing players to easily check for and download the latest version of the game.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,7 @@
 new in 3.2
+Implemented an automatic version checker that compares your local game version against the latest version available online.
+Introduced a built-in update downloader that retrieves the correct update based on your platform (Windows or Mac) and package type (installer or portable), with progress tracking, error handling, and cleanup of incomplete files.
+Added a “Check for Game Updates” option to the main menu, allowing players to easily check for and download the latest version of the game.
 Made it so using a potion now heals a random amount between 5 and 10 percent of your maximum health.
 Added some more item and player related sounds into the learn game sounds menu.
 Added a money reward system for reaching higher levels in Endless mode. Players now earn money based on their current level. This encourages consistent progression and spending throughout gameplay.
