--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.3
+Improved the auto updater. From now on, it will check for updates in the backround at startup, instead of always telling the user that no updates are found upon launching the game every time.
 Moved the music tracks list over to the botum of the test toggle switches found in the sound settings menu.
 new in 3.2
 Added support for automatic update checking on game launch. If the option is enabled in the game settings menu, the game will now check for the latest version online and prompt the user to update it if it's available.
