--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.3
+Repackaged update archives to extract directly into the game's directory, removing unnecessary subfolders for a smoother update experience.
 Added support for extracting password-protected 7z update files in the game updater. This allows seamless in-game installation of encrypted update archives using a well-known password found in the file.
 Made it so the updater now checks if the update file already exists locally, and skips the download if so.
 Added overwrite confirmation prompts after extracting downloaded archives to prevent unintentional file loss.
