--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.4
+Added some more weapon related sounds into the learn game sounds menu.
 Added an option to toggle auto running when the player moves in the game settings menu. The default is holding down the alt or control key to walk, and releasing one of those to run.
 Fixed an issue where adjusting the master volume in the sound settings menu didn't work what so ever.
 Made it so cars don't start shooting you with bullets untill you reach the third level in normal and endless mode.
