--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,6 @@
 new in 3.4
+Added support for loading and saving the TTS rate, volume, voice, and screen reader preferences.
+Added a TTS configuration button to the main speech settings menu. Users can now adjust the rate, volume, and voice for the sapi 5 engin. They can also choose the screen reader output at witch the game speaks in.
 Added some more weapon related sounds into the learn game sounds menu.
 Added an option to toggle auto running when the player moves in the game settings menu. The default is holding down the alt or control key to walk, and releasing one of those to run.
 Fixed an issue where adjusting the master volume in the sound settings menu didn't work what so ever.
