Added directional tracking to doors in Normal Mode. Pressing the letter D now tells players where the door is located in relation to them, such as straight ahead, behind and to the right, etc. It also includes the approximate distance of it in feet.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.4
+Added directional tracking to doors in Normal Mode. Pressing the letter D now tells players where the door is located in relation to them, such as straight ahead, behind and to the right, etc. It also includes the approximate distance of it in feet.
 Added support for loading and saving the TTS rate, volume, voice, and screen reader preferences.
 Added a TTS configuration button to the main speech settings menu. Users can now adjust the rate, volume, and voice for the sapi 5 engin. They can also choose the screen reader output at witch the game speaks in.
 Added some more weapon related sounds into the learn game sounds menu.
