--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,8 +1,10 @@
 new in 3.5
-Removed outdated file replacement logic to prevent errors during updates.
+Added a write-permission check before downloading updates. If the game is running from a protected location like Program Files, users will now be prompted to download the update to their Downloads folder instead.
 Made it so users are notified to manually run the new version of the game upon successful extraction.
+Removed the outdated file replacement logic to prevent errors during updates.
 Improved platform detection to handle Windows and Mac update downloads separately and more reliably.
 Improved the in-game updater. Windows installer updates are now downloaded directly to the user's Downloads folder for proper access permissions. Windows portable updates are now downloaded to the game folder and extracted locally without replacing the running executable file.
+Added some more weapon related sounds into the learn game sounds menu.
 new in 3.4
 Added a manual "Save Game" option to the pause menu, and implemented a timed auto-save system that saves the game every 5 seconds to reduce lag spikes caused by frequent disk writes during player movement.
 Made it so the directional door tracking logic is Reversed to match the real-world orientation of the player. The system now correctly reports when a door is in front, behind, left, or right based on the player's overall location.
