--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.5
+Made it so the updater now adjusts where updates are saved depending on the game version and platform. For installed Windows versions, installer and portable updates are redirected to the user's Downloads folder if the game lacks write permissions. Portable Windows downloads save updates directly to the game directory, while Mac updates are always saved to the user's Downloads folder.
 Added fallback behavior for failed update extractions. If an update extraction fails, the game will now provide clearer feedback and avoids restarting or exiting abruptly, allowing users to try again without patencial data loss.
 Added the ability to disable menu wrapping in the game settings menu.
 Added write-permission checks before downloading updates. If the game is running from a protected location like Program Files, users will now be prompted to download the update to their Downloads folder instead.
