--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,5 +1,6 @@
 new in 3.6
-Made it so store destruction platforms in level 6 of normal mode spawn at randomized positions of the map. The glass platforms that usually spawn during the store countdown are no longer fixed to the same 2 spots. They now appear at random locations on the left and right sides of the map, making each playthrough more dynamic and unpredictable.
+Added randomized platform and heal zone placements in Endless Mode. Platforms and heal zones no longer spawn in the same 2 spots like they once did before.
+Made it so store destruction platforms in level 6 of normal mode now spawn at randomized positions of the map. The glass platforms that usually spawn during the store countdown are no longer fixed to the same 2 spots. They now appear at random locations on the left and right sides of the map.
 Fixed an issue where the shop menu in endless mode refused to work to make successful purchases.
 Removed the save game option found in the pause menu.
 Added some more guard related sounds into the learn game sounds menu.
